backend logo/fix mobile view button

--- a/assets/themes/frontend/css/africa-stock-images.css
+++ b/assets/themes/frontend/css/africa-stock-images.css
@@ -439,6 +439,10 @@ ul li .load-more-btn{
 
 }
 
+header .button-header .custom-btn.login {
+    color: #000;
+}
+
 /*.choice-plan:before {
   content: "";
   position: absolute;
