mobile responsive menu fixuture

--- a/assets/themes/frontend/css/responsive.css
+++ b/assets/themes/frontend/css/responsive.css
@@ -229,7 +229,7 @@
   }
   header .button-header .custom-btn .custom-btn,
   header .button-header .custom-btn.login {
-    color: #fff;
+    color: #000;
   }
   header .menu li {
     margin-right: 16px;
